Formatted files, ready for PR

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -8,8 +8,7 @@
     "\n",
     "We have put all of our methods together for direct comparison in a single notebook.\n",
     "\n",
-    "Problem: Currently we are determining only the indiviudal digits, but we need to recognize these as coherent numbers and be able to assign entries to numbers.\n",
-    "\n"
+    "Problem: Currently we are determining only the indiviudal digits, but we need to recognize these as coherent numbers and be able to assign entries to numbers.\n"
    ]
   },
   {
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,8 +339,9 @@
     "\n",
     "    kde_vals = kde(x_values)\n",
     "\n",
-    "    max_index=np.argmax(kde_vals)\n",
+    "    max_index = np.argmax(kde_vals)\n",
     "    return x_values[max_index]\n",
+    "\n",
     "\n",
     "def select_relevant_bounding_boxes(\n",
     "    sheet_data: List[str],\n",
@@ -375,18 +375,15 @@
     "    bboxes: List[BoundingBox] = [\n",
     "        BoundingBox.from_yolo(yolo_bb, desired_img_width, desired_img_height)\n",
     "        for yolo_bb in sheet_data\n",
-    "        ]\n",
+    "    ]\n",
     "\n",
     "    # generate a list of the digit categories\n",
     "    digit_categories: List[str] = [str(i) for i in range(10)]\n",
-    "    \n",
+    "\n",
     "    # filter out non bounding boxes and those whose category is not a digit\n",
     "    bboxes: List[BoundingBox] = list(\n",
     "        filter(\n",
-    "            lambda bb:\n",
-    "                    isinstance(bb, BoundingBox) and\n",
-    "                    bb.category in digit_categories\n",
-    "            ,\n",
+    "            lambda bb: isinstance(bb, BoundingBox) and bb.category in digit_categories,\n",
     "            bboxes,\n",
     "        )\n",
     "    )\n",
@@ -408,27 +405,23 @@
     "        x_max = int(bounding_box.right)\n",
     "        y_min = int(bounding_box.top)\n",
     "        y_max = int(bounding_box.bottom)\n",
-    "        \n",
+    "\n",
     "        # get the center point of the bounding box for comparison\n",
     "        x_center_bb, y_center_bb = bounding_box.center\n",
     "\n",
     "        # check if the bounding box is a number on the BP chart by comparing to the KDE index + a threshold\n",
-    "        if (x_center_bb > numbers_loc-15 and x_center_bb < numbers_loc+2):\n",
+    "        if x_center_bb > numbers_loc - 15 and x_center_bb < numbers_loc + 2:\n",
     "            # Bounding box is in the top-right region\n",
     "            cv2.rectangle(\n",
     "                resized_image, (x_min, y_min), (x_max, y_max), (255, 255, 0), 1\n",
     "            )\n",
-    "            bounding_boxes_numbers.append(\n",
-    "                bounding_box\n",
-    "            )\n",
+    "            bounding_boxes_numbers.append(bounding_box)\n",
     "        # check if the bounding box is a time on the BP chart by comparing to the KDE index + a threshold\n",
-    "        elif (y_center_bb > time_loc-10 and y_max < time_loc+2):\n",
+    "        elif y_center_bb > time_loc - 10 and y_max < time_loc + 2:\n",
     "            cv2.rectangle(\n",
     "                resized_image, (x_min, y_min), (x_max, y_max), (255, 0, 255), 1\n",
     "            )\n",
-    "            bounding_boxes_time.append(\n",
-    "                bounding_box\n",
-    "            )\n",
+    "            bounding_boxes_time.append(bounding_box)\n",
     "    # plot the lines of the KDE index found for debugging\n",
     "    # numbers_start = (int(numbers_loc), 0)\n",
     "    # numbers_end = (int(numbers_loc), desired_img_height)\n",
@@ -464,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,8 +551,10 @@
     "\n",
     "    return labels\n",
     "\n",
-    "def agglomerative_clustering(bounding_boxes: List[BoundingBox], possible_nclusters: List[int]) -> List[int]:\n",
-    "    \n",
+    "\n",
+    "def agglomerative_clustering(\n",
+    "    bounding_boxes: List[BoundingBox], possible_nclusters: List[int]\n",
+    ") -> List[int]:\n",
     "    # make the bonding box data into a Numpy array\n",
     "    data = np.array([box.center for box in bounding_boxes])\n",
     "\n",
@@ -573,7 +568,7 @@
     "        if number_of_clusters < 1:\n",
     "            raise (f\"Number of clusters {number_of_clusters} must be greater than 0.\")\n",
     "        # use agglomerative clustering\n",
-    "        agg = AgglomerativeClustering(n_clusters=number_of_clusters, linkage='single')\n",
+    "        agg = AgglomerativeClustering(n_clusters=number_of_clusters, linkage=\"single\")\n",
     "        # get labels\n",
     "        labels = agg.fit_predict(data)\n",
     "        # compute the silhoutte scores\n",
@@ -588,7 +583,6 @@
     "    n_clusters_max_silhouette = max(\n",
     "        cluster_performance_map, key=lambda x: cluster_performance_map[x][\"score\"]\n",
     "    )\n",
-    "\n",
     "\n",
     "    best_n_clusters = (\n",
     "        n_clusters_max_silhouette\n",
@@ -613,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,12 +669,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function to generate random Bounding Box formatted occurances."
+    "Function to generate random Bounding Box formatted occurances.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,24 +684,37 @@
     "    left_int = random.randint(105, 720)\n",
     "\n",
     "    # slope and random points ABOVE the line (but coordinates flipped)\n",
-    "    slope, intercept = 1/3, 225\n",
-    "    top_int = random.uniform(225, slope*left_int + intercept)\n",
+    "    slope, intercept = 1 / 3, 225\n",
+    "    top_int = random.uniform(225, slope * left_int + intercept)\n",
     "\n",
-    "    # input generated integers to bounding box \n",
-    "    box = BoundingBox(category=f'{category_int}', left=left_int, top=top_int, right=left_int+4, bottom=top_int+6)\n",
+    "    # input generated integers to bounding box\n",
+    "    box = BoundingBox(\n",
+    "        category=f\"{category_int}\",\n",
+    "        left=left_int,\n",
+    "        top=top_int,\n",
+    "        right=left_int + 4,\n",
+    "        bottom=top_int + 6,\n",
+    "    )\n",
     "    return box\n",
+    "\n",
     "\n",
     "def random_number_generate(x):\n",
     "    # erroneous bounding boxes for number ROI\n",
     "    category_int = random.randint(0, 9)\n",
     "    left_int = random.randint(105, 720)\n",
-    "    \n",
-    "    # slope and random points BELOW the line (but coordinates flipped)\n",
-    "    slope, intercept = 1/3, 225\n",
-    "    top_int = random.uniform(slope*left_int + intercept, 430)\n",
     "\n",
-    "    # input generated integers to bounding box \n",
-    "    box = BoundingBox(category=f'{category_int}', left=left_int, top=top_int, right=left_int+4, bottom=top_int+6)\n",
+    "    # slope and random points BELOW the line (but coordinates flipped)\n",
+    "    slope, intercept = 1 / 3, 225\n",
+    "    top_int = random.uniform(slope * left_int + intercept, 430)\n",
+    "\n",
+    "    # input generated integers to bounding box\n",
+    "    box = BoundingBox(\n",
+    "        category=f\"{category_int}\",\n",
+    "        left=left_int,\n",
+    "        top=top_int,\n",
+    "        right=left_int + 4,\n",
+    "        bottom=top_int + 6,\n",
+    "    )\n",
     "    return box"
    ]
   },
@@ -715,16 +722,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function to remove 5% bounding boxes and create 5% erroneous."
+    "Function to remove 5% bounding boxes and create 5% erroneous.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def erroneous_bounding_boxes(time_BB: List[str], number_BB: List[str]) -> Tuple[List[str], List[str]]:\n",
+    "def erroneous_bounding_boxes(\n",
+    "    time_BB: List[str], number_BB: List[str]\n",
+    ") -> Tuple[List[str], List[str]]:\n",
     "    \"\"\"\n",
     "    Create 5% erroneous bounding boxes by simultaneously removing and generating time and number BB.\n",
     "\n",
@@ -738,7 +747,7 @@
     "    # make copies of input bounding box lists to avoid unwanted manipulation\n",
     "    time_BB_copy = time_BB.copy()\n",
     "    number_BB_copy = number_BB.copy()\n",
-    "    \n",
+    "\n",
     "    # subset and remove 5% of bounding boxes from time/number_bounding_boxes lists\n",
     "    ## sample\n",
     "    time_BB_sample = list(random.sample(time_BB_copy, 4))\n",
@@ -767,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -929,8 +938,12 @@
     "                    number_bounding_boxes, defined_eps=5, min_samples=2\n",
     "                )\n",
     "            elif method == \"agglomerative\":\n",
-    "                time_labels = agglomerative_clustering(time_bounding_boxes, [40,41,42])\n",
-    "                number_labels = agglomerative_clustering(number_bounding_boxes, [18,19,20])\n",
+    "                time_labels = agglomerative_clustering(\n",
+    "                    time_bounding_boxes, [40, 41, 42]\n",
+    "                )\n",
+    "                number_labels = agglomerative_clustering(\n",
+    "                    number_bounding_boxes, [18, 19, 20]\n",
+    "                )\n",
     "            else:\n",
     "                raise ValueError(f\"Invalid clustering method: {method}\")\n",
     "\n",
@@ -1043,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1051,14 +1064,14 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 652 correct clusters, 138 incorrect clusters. The accuracy is 82.53%\n",
-      "Number labels: 196 correct clusters, 179 incorrect clusters. The accuracy is 52.27%\n",
+      "Time labels: 653 correct clusters, 137 incorrect clusters. The accuracy is 82.66%\n",
+      "Number labels: 192 correct clusters, 183 incorrect clusters. The accuracy is 51.20%\n",
       "Method: dbscan\n",
-      "Time labels: 728 correct clusters, 136 incorrect clusters. The accuracy is 84.26%\n",
-      "Number labels: 308 correct clusters, 56 incorrect clusters. The accuracy is 84.62%\n",
+      "Time labels: 729 correct clusters, 127 incorrect clusters. The accuracy is 85.16%\n",
+      "Number labels: 306 correct clusters, 51 incorrect clusters. The accuracy is 85.71%\n",
       "Method: agglomerative\n",
-      "Time labels: 645 correct clusters, 149 incorrect clusters. The accuracy is 81.23%\n",
-      "Number labels: 185 correct clusters, 188 incorrect clusters. The accuracy is 49.60%\n"
+      "Time labels: 654 correct clusters, 139 incorrect clusters. The accuracy is 82.47%\n",
+      "Number labels: 186 correct clusters, 189 incorrect clusters. The accuracy is 49.60%\n"
      ]
     }
    ],
@@ -1211,7 +1224,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1225,7 +1238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
