--- a/utilities/conversion/apply_homography_to_labels.ipynb
+++ b/utilities/conversion/apply_homography_to_labels.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Apply Homography to Labels\n",
     "\n",
-    "This script applies homography to the labels from anesthesia data flowsheets and maps the bounding boxes into the unified space."
+    "This script applies homography to the labels from anesthesia data flowsheets and maps the bounding boxes into the unified space.\n"
    ]
   },
   {
@@ -19,6 +19,7 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "\n",
     "sys.path.append(os.path.join(\"..\", \"..\", \"..\", \"ChartExtractor\", \"src\"))"
    ]
   },
@@ -35,6 +36,7 @@
     "from pathlib import Path\n",
     "from typing import Dict, List, Tuple, Optional\n",
     "from tqdm import tqdm\n",
+    "\n",
     "# Created a folder utils in the conversion folder and moved these files into there so we can call their functions\n",
     "# There should be a better way to do this perhaps, if this is something we will use across various microservices\n",
     "# Perhaps they can be a part of a package.\n",
@@ -72,7 +74,7 @@
    "id": "ddfd5339-e298-4223-a19f-94203044e543",
    "metadata": {},
    "source": [
-    "---"
+    "---\n"
    ]
   },
   {
@@ -80,7 +82,7 @@
    "id": "3dd0d783-7093-4e21-9907-fa112f6deb57",
    "metadata": {},
    "source": [
-    "## Load Data"
+    "## Load Data\n"
    ]
   },
   {
@@ -95,30 +97,34 @@
     "    Loads data from LabelStudio's json format into BoundingBoxes.\n",
     "\n",
     "    Args:\n",
-    "        path_to_json_data (Path) \n",
+    "        path_to_json_data (Path)\n",
     "            A path to the json file containing the data.\n",
     "    Returns:\n",
     "        A list of BoundingBoxes.\n",
     "    \"\"\"\n",
     "    json_data: List[Dict] = json.loads(open(str(path_to_json_data)).read())\n",
     "    return {\n",
-    "        sheet_data['data']['image'].split(\"-\")[-1]:[\n",
+    "        sheet_data[\"data\"][\"image\"].split(\"-\")[-1]: [\n",
     "            BoundingBox(\n",
-    "                category=label['value']['rectanglelabels'][0],\n",
-    "                left=label['value']['x']/100,\n",
-    "                top=label['value']['y']/100,\n",
-    "                right=label['value']['x']/100+label['value']['width']/100,\n",
-    "                bottom=label['value']['y']/100+label['value']['height']/100,\n",
+    "                category=label[\"value\"][\"rectanglelabels\"][0],\n",
+    "                left=label[\"value\"][\"x\"] / 100,\n",
+    "                top=label[\"value\"][\"y\"] / 100,\n",
+    "                right=label[\"value\"][\"x\"] / 100 + label[\"value\"][\"width\"] / 100,\n",
+    "                bottom=label[\"value\"][\"y\"] / 100 + label[\"value\"][\"height\"] / 100,\n",
     "            )\n",
-    "            for label in sheet_data['annotations'][0]['result']\n",
+    "            for label in sheet_data[\"annotations\"][0][\"result\"]\n",
     "        ]\n",
     "        for sheet_data in json_data\n",
     "    }\n",
     "\n",
     "\n",
-    "data_path: Path = Path(\"..\")/\"..\"/\"data\"\n",
-    "landmark_location_data: Dict[str, List[BoundingBox]] = label_studio_to_bboxes(data_path/\"intraop_document_landmarks.json\")\n",
-    "checkbox_location_data: Dict[str, List[BoundingBox]] = label_studio_to_bboxes(data_path/\"intraop_checkbox_names.json\")"
+    "data_path: Path = Path(\"..\") / \"..\" / \"data\"\n",
+    "landmark_location_data: Dict[str, List[BoundingBox]] = label_studio_to_bboxes(\n",
+    "    data_path / \"intraop_document_landmarks.json\"\n",
+    ")\n",
+    "checkbox_location_data: Dict[str, List[BoundingBox]] = label_studio_to_bboxes(\n",
+    "    data_path / \"intraop_checkbox_names.json\"\n",
+    ")"
    ]
   },
   {
@@ -126,7 +132,7 @@
    "id": "c169a1f4-dc7f-4242-b8a4-bb5062fa6cdc",
    "metadata": {},
    "source": [
-    "This is a slightly different version of the homography function from the main program. The only thing it changes is to return the homography matrix along with the image."
+    "This is a slightly different version of the homography function from the main program. The only thing it changes is to return the homography matrix along with the image.\n"
    ]
   },
   {
@@ -195,18 +201,20 @@
    "source": [
     "def get_corresponding_points(bboxes, imsize) -> List[Tuple[float, float]]:\n",
     "    \"\"\"Gets and sorts the points used for the homography from all the bounding boxes that are labeled.\"\"\"\n",
-    "    categories_to_get = ['anesthesia_start', 'lateral', 'safety_checklist', 'units']\n",
+    "    categories_to_get = [\"anesthesia_start\", \"lateral\", \"safety_checklist\", \"units\"]\n",
     "    if not all([c in [bb.category for bb in bboxes] for c in categories_to_get]):\n",
     "        raise ValueError(f\"Necessary labels not found: {categories_to_get}\")\n",
-    "    \n",
-    "    points = list(map(\n",
-    "        attrgetter('center'),\n",
-    "        sorted(\n",
-    "            list(filter(lambda bb: bb.category in categories_to_get, bboxes)), \n",
-    "            key=lambda bb: bb.category\n",
+    "\n",
+    "    points = list(\n",
+    "        map(\n",
+    "            attrgetter(\"center\"),\n",
+    "            sorted(\n",
+    "                list(filter(lambda bb: bb.category in categories_to_get, bboxes)),\n",
+    "                key=lambda bb: bb.category,\n",
+    "            ),\n",
     "        )\n",
-    "    ))\n",
-    "    return [(p[0]*imsize[0], p[1]*imsize[1]) for p in points]"
+    "    )\n",
+    "    return [(p[0] * imsize[0], p[1] * imsize[1]) for p in points]"
    ]
   },
   {
@@ -216,25 +224,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remap_point = lambda p, h: cv2.perspectiveTransform(np.array(p, dtype=np.float32).reshape(-1, 1, 2), h).tolist()[0][0]\n",
+    "remap_point = lambda p, h: cv2.perspectiveTransform(\n",
+    "    np.array(p, dtype=np.float32).reshape(-1, 1, 2), h\n",
+    ").tolist()[0][0]\n",
     "\n",
     "\n",
     "def remap_bbox(\n",
-    "    bbox: BoundingBox, \n",
-    "    homography_matrix: List[List[float]], \n",
-    "    original_width:int=4032, \n",
-    "    original_height:int=3024,\n",
-    "    new_width:int=3300,\n",
-    "    new_height:int=2550,\n",
+    "    bbox: BoundingBox,\n",
+    "    homography_matrix: List[List[float]],\n",
+    "    original_width: int = 4032,\n",
+    "    original_height: int = 3024,\n",
+    "    new_width: int = 3300,\n",
+    "    new_height: int = 2550,\n",
     ") -> BoundingBox:\n",
     "    \"\"\"Maps boundingboxes to a new space using the homography matrix.\n",
-    "    \n",
-    "    Given a bounding box, homography matrix, and the image sizes of the original \n",
+    "\n",
+    "    Given a bounding box, homography matrix, and the image sizes of the original\n",
     "    and destination (new) image, this function returns a remapped bounding box.\n",
     "    \"\"\"\n",
-    "    new_left, new_top = remap_point((bbox.left*original_width, bbox.top*original_height), homography_matrix)\n",
-    "    new_right, new_bottom = remap_point((bbox.right*original_width, bbox.bottom*original_height), homography_matrix)\n",
-    "    return BoundingBox(bbox.category, new_left/new_width, new_top/new_height, new_right/new_width, new_bottom/new_height)\n",
+    "    new_left, new_top = remap_point(\n",
+    "        (bbox.left * original_width, bbox.top * original_height), homography_matrix\n",
+    "    )\n",
+    "    new_right, new_bottom = remap_point(\n",
+    "        (bbox.right * original_width, bbox.bottom * original_height), homography_matrix\n",
+    "    )\n",
+    "    return BoundingBox(\n",
+    "        bbox.category,\n",
+    "        new_left / new_width,\n",
+    "        new_top / new_height,\n",
+    "        new_right / new_width,\n",
+    "        new_bottom / new_height,\n",
+    "    )\n",
+    "\n",
     "\n",
     "# Remap all bounding boxes\n",
     "remap_all_bboxes = lambda bboxes, h: [remap_bbox(bb, h) for bb in bboxes]"
@@ -245,7 +266,7 @@
    "id": "1c2c1fd7",
    "metadata": {},
    "source": [
-    "### Functions To Quickly Grab the Remapped Bounding Boxes In YOLO Format"
+    "### Functions To Quickly Grab the Remapped Bounding Boxes In YOLO Format\n"
    ]
   },
   {
@@ -260,6 +281,7 @@
     "To be called from a for loop to complete for all documents, then exported to YOLO format.\n",
     "\"\"\"\n",
     "\n",
+    "\n",
     "def __get_image_size(path: Path) -> Tuple[int, int]:\n",
     "    \"\"\"\n",
     "    Returns the size of the image based on path\n",
@@ -269,7 +291,10 @@
     "    Returns:\n",
     "        Tuple[int, int]: The width and height of the image\n",
     "    \"\"\"\n",
-    "    return Image.open(data_path/\"unified_intraoperative_preoperative_flowsheet_v1_1_front.png\").size\n",
+    "    return Image.open(\n",
+    "        data_path / \"unified_intraoperative_preoperative_flowsheet_v1_1_front.png\"\n",
+    "    ).size\n",
+    "\n",
     "\n",
     "# Function to convert bounding boxes to YOLO format\n",
     "def convert_to_yolo_format(bbox_list):\n",
@@ -284,7 +309,7 @@
     "\n",
     "\n",
     "def complete_homography_and_get_bounding_boxes(\n",
-    "    path_to_sheet: Path, \n",
+    "    path_to_sheet: Path,\n",
     "    path_to_landmarks: Path,\n",
     "    path_to_registered: Path,\n",
     "    intraoperative: bool = True,\n",
@@ -303,25 +328,29 @@
     "        Optional[str]: The bounding boxes for the sheet in YOLO format. If None then the image could not be opened.\n",
     "    \"\"\"\n",
     "    # Get the landmark location data\n",
-    "    data_path: Path = Path(\"..\")/\"..\"/\"data\"\n",
-    "    landmark_location_data: Dict[str, List[BoundingBox]] = label_studio_to_bboxes(path_to_landmarks)\n",
+    "    data_path: Path = Path(\"..\") / \"..\" / \"data\"\n",
+    "    landmark_location_data: Dict[str, List[BoundingBox]] = label_studio_to_bboxes(\n",
+    "        path_to_landmarks\n",
+    "    )\n",
     "    # Check if the sheet is in the landmark data\n",
     "    if path_to_sheet.name not in landmark_location_data:\n",
     "        print(f\"Sheet {path_to_sheet.name} not found in landmark data.\")\n",
     "        return None\n",
     "    # Get locations of landmarks for this sheet by getting the file name from the path\n",
     "    locations = landmark_location_data[path_to_sheet.name]\n",
-    "    \n",
+    "\n",
     "    # Get the unified front/back image\n",
     "    unified_file = f\"unified_intraoperative_preoperative_flowsheet_v1_1_{'front' if intraoperative else 'back'}.png\"\n",
     "    locations_unified = landmark_location_data[unified_file]\n",
-    "    unified_width, unified_height = __get_image_size(data_path/unified_file)\n",
+    "    unified_width, unified_height = __get_image_size(data_path / unified_file)\n",
     "\n",
     "    # Get the image\n",
     "    try:\n",
     "        image = Image.open(path_to_sheet)\n",
     "    except:\n",
-    "        print(f\"Unable to obtain image for sheet {path_to_sheet}. Likely in main directory and png format.\")\n",
+    "        print(\n",
+    "            f\"Unable to obtain image for sheet {path_to_sheet}. Likely in main directory and png format.\"\n",
+    "        )\n",
     "        return None\n",
     "\n",
     "    # Get image dimensions\n",
@@ -335,7 +364,9 @@
     "    h, pil_img = homography_transform(\n",
     "        src_image=image,\n",
     "        src_points=get_corresponding_points(locations, (width, height)),\n",
-    "        dest_points=get_corresponding_points(locations_unified, (unified_width, unified_height)),\n",
+    "        dest_points=get_corresponding_points(\n",
+    "            locations_unified, (unified_width, unified_height)\n",
+    "        ),\n",
     "        original_image_size=(unified_width, unified_height),\n",
     "    )\n",
     "\n",
@@ -349,7 +380,7 @@
     "    # Save original image wih bounding boxes\n",
     "    # Make a copy of the image\n",
     "    pil_img_no_boxes = pil_img.copy()\n",
-    "    #pil_img_no_boxes = pil_img.resize((800, 600))\n",
+    "    # pil_img_no_boxes = pil_img.resize((800, 600))\n",
     "\n",
     "    # You only need to do this drawing if we are intentionally being visual\n",
     "    if show_images:\n",
@@ -361,17 +392,17 @@
     "\n",
     "        for bounding_box in remapped_locations:\n",
     "            box = [\n",
-    "                bounding_box.left*unified_width,\n",
-    "                bounding_box.top*unified_height,\n",
-    "                bounding_box.right*unified_width,\n",
-    "                bounding_box.bottom*unified_height,\n",
+    "                bounding_box.left * unified_width,\n",
+    "                bounding_box.top * unified_height,\n",
+    "                bounding_box.right * unified_width,\n",
+    "                bounding_box.bottom * unified_height,\n",
     "            ]\n",
     "            draw.rectangle(box, outline=generate_color(), width=3)\n",
     "        pil_img.resize((800, 600))\n",
     "\n",
     "        pil_img.show()\n",
     "\n",
-    "    pil_img_no_boxes.save(path_to_registered/path_to_sheet.name)\n",
+    "    pil_img_no_boxes.save(path_to_registered / path_to_sheet.name)\n",
     "\n",
     "    return remapped_locations"
    ]
@@ -383,7 +414,7 @@
    "source": [
     "### Iterate Over All Sheets, Get Bounding Boxes in YOLO For Registered Images\n",
     "\n",
-    "For each sheet, get the bounding box data in YOLO format. Make sure to create the `registered_images` directory."
+    "For each sheet, get the bounding box data in YOLO format. Make sure to create the `registered_images` directory.\n"
    ]
   },
   {
@@ -405,9 +436,9 @@
     "yolo_dict = {}\n",
     "for sheet in landmark_location_data:\n",
     "    bounding_boxes = complete_homography_and_get_bounding_boxes(\n",
-    "        data_path/f\"chart_images/{sheet}\", \n",
-    "        data_path/\"intraop_document_landmarks.json\", \n",
-    "        data_path/\"registered_images\",\n",
+    "        data_path / f\"chart_images/{sheet}\",\n",
+    "        data_path / \"intraop_document_landmarks.json\",\n",
+    "        data_path / \"registered_images\",\n",
     "        show_images=False,\n",
     "    )\n",
     "    if bounding_boxes is None:\n",
@@ -417,7 +448,7 @@
     "\n",
     "print(yolo_dict)\n",
     "# Save the yolo_dict to a json file\n",
-    "with open(data_path/\"yolo_data.json\", \"w\") as f:\n",
+    "with open(data_path / \"yolo_data.json\", \"w\") as f:\n",
     "    json.dump(yolo_dict, f, indent=4)"
    ]
   }
